--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_USER=postgres
 DB_PASSWORD=123456
 DB_HOST=localhost
-DB_NAME=gestion_flota
+DB_NAME=gestion-flotas
 DB_PORT=5432
 JWT_SECRET=clave_secreta_segura
 PORT=4000
